# mercado

./: .gitignore  Cargo.toml
backend/: .gitignore  Cargo.toml  build.rs
backend/error-responder/: Cargo.toml
backend/error-responder/src/: lib.rs
backend/src/: errors.rs  main.rs  oauth.rs  schwab.rs
backend/src/pages/: authenticated.rs  index.rs  login.rs  mod.rs
backend/src/quotes/: mod.rs  poller.rs
backend/src/schwab/: endpoints.rs  mod.rs  schema.rs
backend/templates/: authenticated.html.hbs  index.html.hbs  login.html.hbs
barter-rs/barter-data/: Cargo.toml
barter-rs/barter-data/src/: lib.rs
barter-rs/barter-data/src/exchange/: mod.rs
barter-rs/barter-data/src/exchange/schwab/: channel.rs  l1.rs  market.rs  message.rs  mod.rs  subscription.rs  trade.rs
barter-rs/barter-data/src/streams/builder/dynamic/: mod.rs
barter-rs/barter-data/src/subscription/: mod.rs
barter-rs/barter-instrument/src/: exchange.rs
barter-rs/barter-integration/: Cargo.toml
barter-rs/barter-integration/src/: lib.rs
barter-rs/barter/src/: lib.rs
db/: Cargo.toml
db/migration/src/: lib.rs  m20260106_202619_create_user.rs
frontend/: package-lock.json
frontend/src/: App.tsx  Home.tsx  WebSocketComponent.tsx  main.tsx
trader/: Cargo.toml
trader/src/: main.rs
