[package]
name = "backend"
version = "0.1.0"
edition = "2024"

[dependencies]
base64 = "0.22.1"
chrono = "0.4.42"
lazy_static = "1.5.0"
rocket = { version = "0.5.1", features = ["tls"]}
rocket_dyn_templates = { version = "0.2.0", features = ["handlebars"] }
rocket_oauth2 = "0.5.0"
serde = "1.0.228"
serde_json = "1.0.148"
