[package]
name = "backend"
version = "0.1.0"
edition = "2024"

[dependencies]
base64 = "0.22.1"
chrono = { version = "0.4.42", features = ["serde"] }
error_responder = { package = "error-responder", path = "./error-responder"}
itertools = "0.14.0"
lazy_static = "1.5.0"
reqwest = { version = "0.13.1", features = ["multipart"] }
rocket = { version = "0.5.1", features = ["tls", "json"]}
rocket_dyn_templates = { version = "0.2.0", features = ["handlebars"] }
rocket_oauth2 = "0.5.0"
serde = { version = "1.0.228", features = ["rc"] }
serde_json = "1.0.148"
thiserror = "2.0.17"
urlencoding = "2.1.3"
ws = { package = "rocket_ws", version = "0.1.1" }
