[package]
name = "trader"
version = "0.1.0"
edition = "2024"

[dependencies]
barter = { workspace = true }
barter-integration = { workspace = true }
barter-instrument = { workspace = true }
barter-data = { workspace = true }
barter-execution = { workspace = true }
barter-macro = { workspace = true }
tokio.workspace = true
tracing.workspace = true
futures.workspace = true
